    reporting the bug, Michel Dänzer for reading through the backtrace and
    diagnosing the problem, and Alan for the final patch. Closes: #390646.

  [ Jurij Smakov ]
  * Add 32_disable_sparc_pci_bridge.diff. Disable PCI bridge handling on
    sparc, which is broken and causes filesystem corruption (by poking
    the PCI bus in the wrong places) on some machines. Closes: #392312.
 
 -- David Nusinow <dnusinow@debian.org>  Fri, 13 Oct 2006 16:05:54 -0400

xorg-server (2:1.1.1-9) unstable; urgency=low

  [ Jurij Smakov ]
  * Add 21_glx_align_fixes.patch to reintroduce the setting of __GLX_ALIGN64
    variable, lost during the modular transition. This setting is essential
    for architectures with strong alignment requirements. Patch affects
    alpha, sparc, amd64, ia64 and s390, mimicking the behaviour of the
    monolithic build. Closes: #388125.

  [ Denis Barbier ]
  * Add 22_xkb_cycle_3layouts.diff to fix layout switching when 3 layouts
    are present.  Thanks Ivan Pascal for the patch.  Closes: #345803

  [ David Nusinow ]
  * Add kFreeBSD support patch (23). Thanks to Robert Millan, Petr Salinger,
    Daniel Stone, and Michael Banck for input and patch writing.
    Closes: #363517
  * Add hurd support patch (24). Thanks Samuel Thibault, Daniel Stone, and
    Michael Banck. Closes: #356300
  * Disable the explicit enabling of dri in the configure. The configure
    script autodetects whether or not to use this anyway, and enabling it
    explicitly breaks the build on hurd. Thanks Samuel Thibault and Michael
    Banck. Closes: #358015
  * Add several patches written by Kristian Høgsberg for allowing compiz to
    work with AIGLX. These patches were vetted by Theirry Reding with valuable
    advice from Michel Dänzer, and feedback from Kristian himself.
    - 25_tfp_damage.diff
    - 26_aiglx_happy_vt_switch.diff
    - 27_aiglx_locking.diff
    - 28_mesa_copy_sub_buffer.diff
    - 29_mesa_reseed_makefile.diff
    - update of 20_mesa_6.5.1.diff